--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,13 +5,13 @@ footer {
 }
 
 footer > div {
-  max-width: 900px; 
+  max-width: 900px;
   width: 90vw;
   margin: 0 auto;
   display: flex;
   align-items: center;
   gap: 2rem;
-  justify-content:space-evenly;
+  justify-content: space-between;
 }
 
 footer a {
@@ -21,7 +21,7 @@ footer a {
 }
 
 footer a:hover {
-  color: #f472b6;
+  color: royalblue;
 }
 
 @media (max-width: 700px) {
