--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,7 +11,7 @@ footer > div {
   display: flex;
   align-items: center;
   gap: 2rem;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 footer a {
